--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <title>GoFuel</title>
 </head>
 <body>
+  <h1 class="text-center">GoFuel</h1>
+  <div class="mx-auto text-center">
+    <h5>This is a H3 tag</h5>
+    <div class="row">
+      <p class="col-6 ">This is a p tag on the left</p>
+      <p class="col-6">This is a p tag on the right</p>
+    </div>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="/assets/js/keys.js"></script>
   <script src="/assets//js/script.js"></script>
