Index structure added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GoFuel</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />  <title>GoFuel</title>
 </head>
 <body>
+  
+   <!-- Navbar-->
+<nav class="navbar navbar-light bg-success">
+
+  <span class="navbar-brand mb-0 h1">Go Fuel</span>
+
+</nav>
+
+<!-- End Of Navbar -->
+
+<!-- dom apis -->
+
+  <main>
+
+  <div class="square">
+    
+    <h4>Map Here</h4>
+  
+    </div>
+  
+
+  <div class="api"></div>
+
+</main>
+
+<!-- end dom apis -->
+
+<!-- footer -->
+
+<div class="text-center p-3 bg-success fixed-bottom">
+
+  <a class="text-white" href="https://mdbootstrap.com/">© 2020: Go Fuel</a>
+
+ </div>
+
+<!-- End of footer -->
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="/assets/js/keys.js"></script>
   <script src="/assets//js/script.js"></script>
