--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" class=>
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="style.css" />  <title>GoFuel</title>
-</head>
-<body>
   
-   <!-- Navbar-->
-<nav class="navbar navbar-light bg-success">
+  <meta charset="UTF-8">
+  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+  
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  
+  <title>GoFuel</title>
 
-  <span class="navbar-brand mb-0 h1">Go Fuel</span>
+</head>
+
+<body>
+
+
+  <!-- Navbar-->
+<nav class="navbar navbar-light">
+
+  <span id= "unico" class="navbar-brand mb-0 h1">Go Fuel</span>
 
 </nav>
 
 <!-- End Of Navbar -->
 
-<!-- dom apis -->
 
-  <main>
+
+<!-- dom apis -->
+<main>
 
   <div class="square">
     
-    <h4>Map Here</h4>
-  
-    </div>
-  
+  </div>
 
   <div class="api"></div>
 
@@ -38,45 +47,17 @@
 
 <!-- footer -->
 
-<div class="text-center p-3 bg-success fixed-bottom">
+<footer class=" text-center p-3  fixed-bottom">
 
-  <a class="text-white" href="https://mdbootstrap.com/">© 2020: Go Fuel</a>
-
- </div>
+  
+  
+  <a class="text-footer" href="https://mdbootstrap.com/">© 2020: Go Fuel</a>
+</footer>
 
 <!-- End of footer -->
-  
-
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
-  <title>GoFuel</title>
-</head>
-<body>
-
-  <h1 class="text-center">GoFuel</h1>
-  <div class="mx-auto text-center">
-    <h5>Fuel Price in 80210</h5>
-    <p id="nearestStation"></p>
-    <div class="row">
-      <p class="col-6 mx-auto" id="regularDisplay">Regular: </p>
-      <p class="col-6 mx-auto" id="dieselDisplay">Diesel: </p>
-    </div>
-    </div>
-  </div>
-
-  <!-- Mapbox Div -->
-  <section id="mapbox-container">
-    <div class="mx-auto" id='map'></div>
-  </section>
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
   <script src="/assets/js/keys.js"></script>
   <script src="/assets//js/script.js"></script>
-  <script>
-
-  </script>
 </body>
 </html>
