--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 <nav class="navbar navbar-light">
 
   <span id= "unico" class="navbar-brand mb-0 h1">Go Fuel</span>
+  <ul id="navList">
+    <li>
+      <a href="article.html">Saving Fuel Tips </a>
+    </li>
+  </ul>
 
 </nav>
 
@@ -86,6 +91,10 @@
           <p class="col-6 mx-auto" id="dieselDisplay">Diesel: </p>
         </div>
       </div>
+    </section>
+
+    <section id="facts">
+      cards
     </section>
   </main>
   <!-- end Mapbox -->
