--- a/index.html
+++ b/index.html
@@ -1,76 +1,25 @@
 <!DOCTYPE html>
-
 <html lang="en" class=>
-
 <head>
-  
   <meta charset="UTF-8">
-  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-  
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  
-  <title>GoFuel</title>
-
-</head>
-
-<body>
-
-
-  <!-- Navbar-->
-<nav class="navbar navbar-light">
-
-  <span id= "unico" class="navbar-brand mb-0 h1">Go Fuel</span>
-  <ul id="navList">
-    <li>
-      <a href="article.html">Saving Fuel Tips </a>
-    </li>
-  </ul>
-
-</nav>
-
-<!-- End Of Navbar -->
-
-<p>TEST</p>
-
-<!-- dom apis -->
-<main>
-
-  <div class="square">
-    
-  </div>
-
-  <div class="api"></div>
-
-</main>
-
-<!-- end dom apis -->
-
-<!-- footer -->
-
-<footer class=" text-center p-3  fixed-bottom">
-
-  
-  
-  <a class="text-footer" href="https://mdbootstrap.com/">© 2020: Go Fuel</a>
-</footer>
-
-<!-- End of footer -->
-
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
   <title>GoFuel</title>
 </head>
+
 <body>
   <!-- Navbar-->
-  <nav class="navbar navbar-light bg-success">
-    <span class="navbar-brand mb-0 h1">Go Fuel</span>
+  <nav class="navbar navbar-light">
+    <span id= "unico" class="navbar-brand mb-0 h1">Go Fuel</span>
+    <ul id="navList">
+      <li>
+        <a href="article.html">Saving Fuel Tips </a>
+      </li>
+    </ul>
   </nav>
   <!-- End Of Navbar -->
 
@@ -105,15 +54,9 @@
   </div>
   <!-- End of footer -->
 
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
   <script src="/assets/js/keys.js"></script>
   <script src="/assets//js/script.js"></script>
-
-  <script>
-  
-  </script>
-
 </body>
-
 </html>
