search bar code added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
   </nav>
   <!-- End Of Navbar -->
 
+  <!--Search bar for userInput-->
+  <div class="search-wrapper">
+    <label for="search">Search</label>
+    <input type="search" id="search">
+  </div>
+
   <!-- Mapbox API -->
   <main>
     <section id="mapbox-container">
