--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>GoFuel</title>
 </head>
 
-<body>
+<>
   <!-- Navbar-->
   <nav class="navbar navbar-light">
     <span id= "unico" class="navbar-brand mb-0 h1">Go Fuel</span>
@@ -25,9 +25,11 @@
 
   <!--Search bar for userInput-->
   <div class="search-wrapper">
-    <label for="search">Search</label>
-    <input type="search" id="search">
+    <input type="text" id="zip-code-input">
+    <button id="submit-zip-code">Go</button>
   </div>
+  
+
 
   <!-- Mapbox API -->
   <main>
