--- a/index.html
+++ b/index.html
@@ -23,26 +23,19 @@
   </nav>
   <!-- End Of Navbar -->
 
-  <!--Search bar for userInput-->
-  <div class="search-wrapper">
-    <input type="text" id="zip-code-input">
-    <button id="submit-zip-code">Go</button>
-  </div>
-
   <!-- Mapbox API -->
   <main>
     <section>
-        <div>
-        <input type="search" id="search-bar" class="form-control" placeholder="Enter your ZIP Code e.g. 80210" />
-        </div>
+      <div>
+        <input
+          type="search"
+          id="zip-code-input"
+          class="search-bar"
+          placeholder="Enter your ZIP Code e.g. 80210"
+        />
+        <button class="go-btn" id="submit-zip-code">SEARCH</button>
+      </div>
     </section>
-
-    <div class="search-wrapper">
-      <label for="search">Search</label>
-      <input type="search" id="search">
-      <input type="text" id="zip-code-input">
-      <button id="submit-zip-code">Go</button>
-    </div>
 
     <section id="map-area">
       <div class="row">
@@ -52,10 +45,6 @@
           <div id="fuelCard"></div>
         </div>
       </div>
-    </section>
-
-    <section id="facts">
-      cards
     </section>
   </main>
   <!-- end Mapbox -->
