Major changes to site design

--- a/article.html
+++ b/article.html
@@ -20,7 +20,7 @@
         </h3>
         <img
           id="carimg"
-          src="/assets/img/car1.webp"
+          src="/assets/images/car1.webp"
           alt="picture showing car"
         />
         <div class="content">
