--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="assets/images/droplet-128.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,17 +46,17 @@
     <section>
       <div>
         <input
-          type="search"
-          id="zip-code-input"
-          class="search-bar"
-          placeholder="Enter your ZIP Code e.g. 80210"
+        type="search"
+        id="zip-code-input"
+        class="search-bar"
+        placeholder="Enter your ZIP Code e.g. 80210"
         />
-        <button class="go-btn" id="submit-zip-code">SEARCH</button>
+        <button class="search-btn" id="submit-zip-code">SEARCH</button>
       </div>
     </section>
 
     <section id="map-area">
-      <div class="col-12" id="static-map"></div>
+      <div id="static-map"></div>
       <div class="row">
         <div class="col" id="map"></div>
         <div class="col-sm-4" id="stations">
