Mapbox marker added for first index in API call

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" id="unico" href="#">GoFuel <img id="water-drop" src="/assets/images/droplet-128.png" alt="water-drop"/></a>
+    <a class="navbar-brand" id="unico" href="#" onclick="document.reload()">GoFuel <img id="water-drop" src="/assets/images/droplet-128.png" alt="water-drop"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span id="burger-icon" class="navbar-toggler-icon"></span>
     </button>
