--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- end Mapbox -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
-  <script src="/assets/js/keys.js"></script>
-  <script src="/assets/js/script.js"></script>
+  <script src="assets/js/keys.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
