saved searches page created

--- a/saved.html
+++ b/saved.html
@@ -28,7 +28,7 @@
           <a class="nav-link text-white" href="saved.html">Saved Searches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="article.html">Fuel Tips</a>
+          <a class="nav-link text-white" href="/article.html">Fuel Tips</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Average US Prices</a>
@@ -47,26 +47,6 @@
   <!-- Mapbox API -->
   <main>
     <section>
-      <div>
-        <input
-        type="search"
-        id="zip-code-input"
-        class="search-bar"
-        placeholder="Enter your ZIP Code e.g. 80210"
-        />
-        <button class="search-btn" id="submit-zip-code">SEARCH</button>
-      </div>
-    </section>
-
-    <section id="map-area">
-      <div id="static-map"></div>
-      <div class="row">
-        <div class="col" id="map"></div>
-        <div class="col-sm-4" id="stations">
-          <!-- Added via jQuery in script.js -->
-          <div id="fuelCard"></div>
-        </div>
-      </div>
     </section>
   </main>
   <!-- end Mapbox -->
