--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" id="unico" href="index.html" onclick="document.reload()">GoFuel <img id="water-drop" src="./assets/images/droplet-128.png" alt="water-drop"/></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" id="unico" href="index.html">GoFuel <img id="water-drop" src="./assets/images/droplet-128.png" alt="water-drop"/></a>
+    <button class="navbar-toggler" type="button" onclick="saveSearch()" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span id="burger-icon" class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -53,6 +53,7 @@
         id="zip-code-input"
         class="search-bar"
         placeholder="Enter your ZIP Code e.g. 80210"
+        required
         />
         <button class="search-btn" id="submit-zip-code">SEARCH</button>
       </div>
@@ -70,6 +71,7 @@
     </section>
   </main>
   <!-- end Mapbox -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
   <script src="./assets/js/keys.js"></script>
