--- a/saved.html
+++ b/saved.html
@@ -11,7 +11,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link href='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css' rel='stylesheet' />
   <title>GoFuel</title>
 </head>
 
@@ -28,7 +27,7 @@
           <a class="nav-link text-white" href="saved.html">Saved Searches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/article.html">Fuel Tips</a>
+          <a class="nav-link text-white" href="article.html">Fuel Tips</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Average US Prices</a>
@@ -44,15 +43,22 @@
   </nav>
   <!-- End Of Navbar -->
 
-  <!-- Mapbox API -->
+  <!-- Saved Searches -->
   <main>
     <section>
+      <div class="wrapper">
+        <h1>Saved Searches</h1>
+        <ol id="saved-searches"></ol>
+
+        <a href="index.html"><button>Go Back</button></a>
+        <button id="clear">Clear Searches</button>
+      </div>
     </section>
   </main>
-  <!-- end Mapbox -->
+  <!-- end Saved Searches -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js'></script>
   <script src="./assets/js/keys.js"></script>
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/saved.js"></script>
 </body>
 </html>
